Alistando la ultima version de mi blog personal los ultimos ajustes son colocar un video de 5 min donde habla de mi website

--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,6 @@
                     En esta sección hablaré acerca de todos los <b class="font-bold">conceptos relacionados a tecnología</b>, pero en especial al <b class="font-bold">Desarrollo Web.</b>
                 </span>
 
-
                 <div class="main-blog">
                     <div class="blog-info">
                         <h2 class="blog-info__title" id="myOpinionHTML-info-blog">HTML un lenguaje con una historia increible y emocionante</h2>
@@ -75,8 +74,6 @@
                             <b class="font-bold font-bold--infoBlog">Autor: </b> Hairton Mayhuay &rArr;
                             <b class="font-bold font-bold--infoBlog">Fecha: </b> --/09/2020
                         </span>
-
-                        <img src="" alt="" class="article__img">
 
                         <p class="paragraph paragraph--section-bigDevice">
                             HTML un lenguaje amado por unos y no tan comprendido por otros. Nació en 1991 gracias al Científico <b class="font-bold">Tim Berners-Lee.</b>
@@ -349,10 +346,6 @@
                 </div>
             </article>
         </section>
-
-        <aside class="aside">
-
-        </aside>
     </div>
 
 
@@ -392,6 +385,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
