--- a/card-1-css3.html
+++ b/card-1-css3.html
@@ -79,10 +79,6 @@
                 <img src="img/css-code.png" alt="code of css" class="codes codes--bigDevice">
             </article>    
         </section>
-
-
-        <aside class="aside">
-        </aside>
     </div>
 
 
@@ -117,11 +113,13 @@
                 <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
+
             <div class="main-modal">
                 <div class="modal-box">
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
