--- a/card-3-css3.html
+++ b/card-3-css3.html
@@ -87,10 +87,6 @@
                 <img src="img/selector_class_css.png" alt="selector class css" class="codes codes--bigDevice">
             </article>
         </section>
-
-        <aside class="aside">
-            
-        </aside>
     </div>
 
 
@@ -130,6 +126,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
