--- a/card-3-html5.html
+++ b/card-3-html5.html
@@ -73,7 +73,7 @@
                     Ya definido HTML, empezemos por las etiquetas o también conocidas como <b class="font-bold">tags</b>, todo en HTML, se trabajan con equitas, ahora bien hay <b class="font-bold">etiquetas de apertura y cierre</b>. A continución te mostraré como se estructura una etiqueta.
                 </p>
 
-                <img src="img/tags_html.png" alt="tags in html" class="codes codes--bigDevice">
+                <img src="./img/tags_html_example.png" alt="tags in html" class="codes codes--bigDevice">
 
                 <p class="paragraph  paragraph--section-bigDevice">
                     Cada elemento en html tiene una etiqueta de apertura y de cierre y entre estas dos va el contenido. En ejemplo es una etiqueta de <b class="font-bold">parráfos "p"</b>.
@@ -142,10 +142,6 @@
                 </p>
             </article>
         </section>
-
-
-        <aside class="aside">
-        </aside>
     </div>
 
 
@@ -185,6 +181,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
