--- a/curso_css3.html
+++ b/curso_css3.html
@@ -111,8 +111,10 @@
                 <img src="img/variable_css.png" alt="variables in css" class="aside-info__img">
 
                 <p class="paragraph paragraph--aside">
-                    En <b class="font-bold font-bold--aside">CSS3</b> ahora se pueden usar variables que pueden guardar y almacenar valores. Las variables se declaran mediante la palabra clave <b class="font-bold font-bold--aside">:root{ /*------- variables -------*/}</b> como por ejemplo en el siguiente código <a class="aside-info__link" href="blog.html#varCSS-info-blog">Go</a>
+                    En <b class="font-bold font-bold--aside">CSS3</b> ahora se pueden usar variables que pueden guardar y almacenar valores. Las variables se declaran mediante la palabra clave <b class="font-bold font-bold--aside">:root{ /*------- variables -------*/}</b> como por ejemplo en el siguiente código...
                 </p>
+
+                <button class="button-go"><a class="aside-info__link" href="blog.html#varCSS-info-blog">Go</a></button>
             </div>
         </aside>
     </div>
@@ -154,6 +156,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
