--- a/curso_html5.html
+++ b/curso_html5.html
@@ -111,8 +111,10 @@
                 <img class="aside-info__img" src="img/web.png" alt="image of the Web">
 
                 <p class="paragraph paragraph--aside"> 
-                    La web, muchos creen que es internet, pero la realidad es que <b class="font-bold font-bold--aside">internet</b> es la infraestructura sobre la cual esta la <b class="font-bold font-bold--aside">web</b>... <a class="aside-info__link" href="blog.html#web-info-blog">Go</a>
+                    La web, muchos creen que es internet, pero la realidad es que <b class="font-bold font-bold--aside">internet</b> es la infraestructura sobre la cual esta la <b class="font-bold font-bold--aside">web</b>... 
                 </p>
+
+                <button class="button-go"><a class="aside-info__link" href="blog.html#web-info-blog">Go</a></button>
             </div>
         </aside>
     </div>
@@ -154,6 +156,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
