--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                 <img class="aside-info__img" src="img/computer.svg" alt="img_web">
 
                 <p class="paragraph paragraph--aside">
-                    La Web son un conjuntos de <b class="font-bold font-bold--aside">documentos HTML</b> enlazados y desplegados en toda internet. Además existen buscadores que nos permiten tener todos los documentos HTML en un solo lugar... <a class="aside-info__link" href="blog.html#web-info-blog">Go</a>
+                    La Web son un conjuntos de <b class="font-bold font-bold--aside">documentos HTML</b> enlazados y desplegados en toda internet. Además existen buscadores que nos permiten tener todos los documentos HTML en un solo lugar...
                 </p>
+
+                <button class="button-go"><a href="blog.html#web-info-blog">Go</a></button>
             </div>
 
             <div class="aside-info">
@@ -115,8 +117,11 @@
                 <img class="aside-info__img" src="img/api_html.png" alt="image API" class="aside-info__Img">
 
                 <p class="paragraph paragraph--aside">
-                    Una API en <b class="font-bold font-bold--aside">Desarrollo Web</b>, son un conjunto de servicios que pemrite la conexión entre el <b class="font-bold font-bold--aside">backend y el frontend</b>, permitiendo asi consumir información de una manera más eficiente... <a class="aside-info__link" href="blog.html#api-info-blog">Go</a>
+                    Una API en <b class="font-bold font-bold--aside">Desarrollo Web</b>, son un conjunto de servicios que pemrite la conexión entre el <b class="font-bold font-bold--aside">backend y el frontend</b>, permitiendo asi consumir información de una manera más eficiente... 
+                    <!-- <a class="aside-info__link" href="blog.html#api-info-blog">Go</a> -->
                 </p>
+                
+                <button class="button-go"><a href="blog.html#api-info-blog">Go</a></button>
             </div>
         </aside>
     </div>
@@ -158,6 +163,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
