--- a/info-author.html
+++ b/info-author.html
@@ -72,10 +72,6 @@
                </div>
             </article>
         </section>
-
-        <aside class="aside">
-
-        </aside>
     </div>
 
     <footer class="footer"> <!-- BLOCK footer -->
@@ -114,6 +110,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
