--- a/news.html
+++ b/news.html
@@ -150,8 +150,10 @@
                 <img class="aside-info__img" src="img/icon_platzi.png" alt="icon platzi">
 
                 <p class="paragraph paragraph--aside">
-                    <b class="font-bold font-bold--aside">Platzi</b> es una plataforma de educación online que ofrece cursos de <b class="font-bold font-bold--aside">Diseño, marketing, tecnología y finanzas</b>, sus fundadores son John Freddy Vega y Christian Van Der Henst <a class="aside-info__link" href="blog.html#platzi-info-blog">Go</a>
+                    <b class="font-bold font-bold--aside">Platzi</b> es una plataforma de educación online que ofrece cursos de <b class="font-bold font-bold--aside">Diseño, marketing, tecnología y finanzas</b>, sus fundadores son John Freddy Vega y Christian Van Der Henst...
                 </p>
+
+                <button class="button-go"><a class="aside-info__link" href="blog.html#platzi-info-blog">Go</a></button>
             </div>
         </aside>
     </div>
@@ -192,6 +194,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
