--- a/sensorMotor.html
+++ b/sensorMotor.html
@@ -113,8 +113,10 @@
                 <img class="aside-info__img" src="img/arduino_logo.png" alt="image of arduino">
 
                 <p class="paragraph paragraph--aside">
-                    Arduino es una plataforma electrónica totalmente <b class="font-bold font-bold--aside">open source</b>, que tiene el concepto de ser <b class="font-bold font-bold--aside">facil de usar</b>, tanto en hardware como en software. <a href="blog.html#arduino-info-blog" class="aside-info__link">Go</a>
+                    Arduino es una plataforma electrónica totalmente <b class="font-bold font-bold--aside">open source</b>, que tiene el concepto de ser <b class="font-bold font-bold--aside">facil de usar</b>, tanto en hardware como en software...
                 </p>
+
+                <button class="button-go"><a href="blog.html#arduino-info-blog" class="aside-info__link">Go</a></button>
             </div>
         </aside>
     </div>
@@ -156,6 +158,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
