--- a/card-1-sensorMotor.html
+++ b/card-1-sensorMotor.html
@@ -85,10 +85,6 @@
                 </p>
             </article>
         </section>
-
-        <aside class="aside">
-
-        </aside>
     </div>
 
 
@@ -128,6 +124,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
