--- a/card-2-css3.html
+++ b/card-2-css3.html
@@ -92,11 +92,6 @@
                 <img src="img/code-css-file.png" alt="code css" class="codes codes--bigDevice">
             </article>    
         </section>
-
-
-        <aside class="aside">
-            
-        </aside>
     </div>
 
 
@@ -136,6 +131,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
