--- a/card-2-html5.html
+++ b/card-2-html5.html
@@ -88,10 +88,6 @@
                 </p>
             </article>
         </section>
-
-
-        <aside class="aside">
-        </aside>
     </div>
 
 
@@ -131,6 +127,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
