--- a/card-3-sensorMotor.html
+++ b/card-3-sensorMotor.html
@@ -136,10 +136,6 @@
                 </p>
             </article>
         </section>
-
-        <aside class="aside">
-
-        </aside>
     </div>
 
 
@@ -179,6 +175,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
