--- a/card-4-html5.html
+++ b/card-4-html5.html
@@ -126,10 +126,6 @@
                 <img src="img/tag_style_html.png" alt="tag style html" class="codes codes--bigDevice">
             </article>
         </section>
-
-
-        <aside class="aside">
-        </aside>
     </div>
 
 
@@ -169,6 +165,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
