--- a/courses.html
+++ b/courses.html
@@ -92,10 +92,6 @@
                 </div>
             </article>
         </section>
-
-        <aside class="aside">
-            
-        </aside>
     </div>
 
 
@@ -135,6 +131,7 @@
                     <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
+                    <button class="modal-box__button"></button>
                     <span class="modal-box__close">&times;</span>
                 </div>
             </div>
